@@ -1,5 +1,7 @@
 2010-05-28  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-basic.el (sql-mode-hook): sql-mode Setting.
+
 	* init-basic.el (kbd): Alias (kbd "ESC <f6>") to [M-f6].
 	(kbd): Alias (kbd "ESC <C-f6>") to [C-M-f6].
 	(grep-current-dir): When (grep-current-dir) return empty, prompt.
